# bt-brief

./: .env.example  .gitignore  README.md  pyproject.toml  sample_digest.html
.github/: pull_request_template.md
.github/workflows/: daily-digest.yml
scripts/: run_daily.sh
src/bt_brief/: __init__.py  config.py  digest_builder.py  filter_author.py  mailer.py  main.py  rss_fetcher.py  summarizer.py
